crates/ink/tests/ui/storage_item/fail/packed_is_not_derived_automatically.stderr
error[E0277]: the trait bound `NonPacked: Packed` is not satisfied
  --> tests/ui/storage_item/fail/packed_is_not_derived_automatically.rs:15:30
   |
15 |     let _ = consume_packed::<NonPacked>();
   |                              ^^^^^^^^^ the trait `WrapperTypeDecode` is not implemented for `NonPacked`
   |
   = help: the following other types implement trait `WrapperTypeDecode`:
             Arc<T>
             Box<T>
             Rc<T>
             sp_core::Bytes
   = note: required for `NonPacked` to implement `ink::parity_scale_codec::Decode`
   = note: required for `NonPacked` to implement `Packed`
note: required by a bound in `consume_packed`
  --> tests/ui/storage_item/fail/packed_is_not_derived_automatically.rs:12:22
   |
12 | fn consume_packed<T: Packed>() {}
   |                      ^^^^^^ required by this bound in `consume_packed`

error[E0277]: the trait bound `NonPacked: Packed` is not satisfied
  --> tests/ui/storage_item/fail/packed_is_not_derived_automatically.rs:15:30
   |
15 |     let _ = consume_packed::<NonPacked>();
   |                              ^^^^^^^^^ the trait `WrapperTypeEncode` is not implemented for `NonPacked`
   |
   = help: the following other types implement trait `WrapperTypeEncode`:
             &T
             &mut T
             Arc<T>
             Box<T>
             Cow<'_, T>
             Rc<T>
             String
             Vec<T>
           and $N others
   = note: required for `NonPacked` to implement `Encode`
   = note: required for `NonPacked` to implement `Packed`
note: required by a bound in `consume_packed`
  --> tests/ui/storage_item/fail/packed_is_not_derived_automatically.rs:12:22
   |
12 | fn consume_packed<T: Packed>() {}
   |                      ^^^^^^ required by this bound in `consume_packed`
